Changed the position of some buttons and also aligned the columns correctly finaly

--- a/organizer.css
+++ b/organizer.css
@@ -1,11 +1,11 @@
 .row{clear:both}
 
 .column{
-    width: 20%;
+    width: 19%;
     float: left;
 }
 
-#to-do-title{
+#to-do-title, #input-group-todo{
     margin-left: 20px;
 }
 
@@ -13,12 +13,58 @@
     margin-top: 10px;
 }
 
-#danger {
-    margin-left: 10px;
-    size: 1px;
+li {
+    margin-left: 22px;
 }
 
 ul {
     list-style-type: none;
   }
 
+input {
+    margin-left: 0px;
+    padding-left: 0px;
+    width: 100%;
+    outline: none;
+    height: 30px;
+    border-radius: 5px;
+}
+  
+#add {
+    position: absolute;
+    top: 0;
+    border-radius: 5px;
+    right: 0px;
+    z-index: 3;
+    border: none;
+    height: 33px;
+    cursor: pointer;
+    color: white;
+    transform: translateX(2px);
+    width: 32px;
+    font-size: 20px;
+}
+
+#danger {
+    margin-left: 1px;
+    border-radius: 5px;
+    z-index: 2;
+    border: 1px solid black;
+    height: 20px;
+    cursor: pointer;
+    color: white;
+    transform: translateX(2px);
+    width: 20px;
+    font-size: 15px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.column{
+    margin-left: 10px;
+}
+
+.input-group{
+    margin-bottom: 10px;
+}
